--- a/index.html
+++ b/index.html
@@ -1,13 +1,377 @@
+<!DOCTYPE html>
+<html lang="en">
 
- <!DOCTYPE html>
- <html>
- <head>
- <title>Page Title</title>
- </head>
- <body>
- 
- <h1>This is a Heading</h1>
- <p>This is a paragraph.</p>
- 
- </body>
- </html>
+<head>
+   <!-- basic -->
+   <meta charset="utf-8">
+   <meta http-equiv="X-UA-Compatible" content="IE=edge">
+   <!-- mobile metas -->
+   <meta name="viewport" content="width=device-width, initial-scale=1">
+   <meta name="viewport" content="initial-scale=1, maximum-scale=1">
+   <!-- site metas -->
+   <title>keto</title>
+   <meta name="keywords" content="">
+   <meta name="description" content="">
+   <meta name="author" content="">
+   <!-- bootstrap css -->
+   <link rel="stylesheet" href="css/bootstrap.min.css">
+   <!-- style css -->
+   <link rel="stylesheet" href="css/style.css">
+   <!-- Responsive-->
+   <link rel="stylesheet" href="css/responsive.css">
+   <!-- fevicon -->
+   <link rel="icon" href="images/banner2.jpg" type="image/gif" />
+   <!-- Scrollbar Custom CSS -->
+   <link rel="stylesheet" href="css/jquery.mCustomScrollbar.min.css">
+   <!-- Tweaks for older IEs-->
+   <link rel="stylesheet" href="https://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css">
+   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fancybox/2.1.5/jquery.fancybox.min.css"
+      media="screen">
+   <!--[if lt IE 9]>
+      <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
+      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script><![endif]-->
+</head>
+<!-- body -->
+
+<body class="main-layout">
+   <!-- loader  -->
+   <div class="loader_bg">
+      <div class="loader"><img src="images/loading.gif" alt="#" /></div>
+   </div>
+   <!-- end loader -->
+   <!-- header -->
+   <header>
+      <!-- header inner -->
+      <div class="header">
+         <div class="container">
+            <div class="row">
+               <div class="col-xl-3 col-lg-3 col-md-3 col-sm-3 col logo_section">
+                  <div class="full">
+                     <div class="center-desk">
+                        <div class="logo">
+                           <a href="index.html"><span style="font-size: 30PX;">Alens Swimming</span></a>
+                        </div>
+                     </div>
+                  </div>
+               </div>
+               <div class="col-xl-9 col-lg-9 col-md-9 col-sm-9">
+                  <nav class="navigation navbar navbar-expand-md navbar-dark">
+                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExample04"
+                        aria-controls="navbarsExample04" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                     </button>
+                     <div class="collapse navbar-collapse" id="navbarsExample04">
+                        <ul class="navbar-nav mr-auto ">
+                           <li class="nav-item active">
+                              <a class="nav-link" href="#home">Home</a>
+                           </li>
+                           <li class="nav-item">
+                              <a class="nav-link" href="#about">About</a>
+                           </li>
+                           <li class="nav-item">
+                              <a class="nav-link" href="#schedule">Schedule</a>
+                           </li>
+                           <li class="nav-item">
+                              <a class="nav-link" href="#facility">Facility</a>
+                           </li>
+                           <li class="nav-item">
+                              <a class="nav-link" href="#contact">Contact Us</a>
+                           </li>
+                        </ul>
+                     </div>
+                  </nav>
+               </div>
+            </div>
+         </div>
+      </div>
+   </header>
+   <!-- end header inner -->
+   <!-- end header -->
+   <!-- banner -->
+   <section class="banner_main">
+      <div id="myCarousel" class="carousel slide banner" data-ride="carousel">
+         <div class="carousel-inner">
+            <div class="carousel-item active">
+               <img class="second-slide" src="images/banner2.jpg" alt="Second slide">
+            </div>
+            <div class="carousel-item">
+               <img class="third-slide" src="images/banner3.jpg" alt="Third slide">
+            </div>
+         </div>
+         <a class="carousel-control-prev" href="#myCarousel" role="button" data-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+         </a>
+         <a class="carousel-control-next" href="#myCarousel" role="button" data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+         </a>
+      </div>
+      <div class="booking_ocline">
+         <div class="container">
+            <div class="row">
+               <div class="col-md-5">
+                  <div class="book_room">
+                     <h1>Welcome To Alens Swimming Pool</h1>
+                     <h3 align="center" style="color: white;">Mari Bergabung dengan Kolam Renang Indah Kami</h3
+                        align="center">
+                  </div>
+               </div>
+            </div>
+         </div>
+      </div>
+   </section>
+   <!-- end banner -->
+   <!-- about -->
+   <div class="about">
+      <div class="container-fluid" id="about">
+         <div class="row">
+            <div class="col-md-5">
+               <div class="titlepage">
+                  <h2>About Us</h2>
+                  <p align="justify">Alens Swimming Pool merupakan taman rekreasi air terbesar di Karawang yang tahap
+                     pertamanya
+                     menghadirkan tiga kolam renang dengan indah dan elegan. Alens Swimming Pool dibangun diatas tanah
+                     seluas 2,4 Ha dengan kapasitas pengunjung sekitar 1.000 orang.
+
+                     Pintu masuk WAW dibangun dengan karakter berwarna untuk mengingatkan pengunjung kepada wahana ini
+                     dengan arsitektur layaknya gerbang menuju negeri ajaib. Selain sebagai pintu masuk, pengunjung
+                     dapat mengabadikan moment berharga bersama keluarga dengan latar belakang yang berkarakter,
+                     dipenuhi ornamen negeri ajaib. Hal ini menjadi salah satu hal yang membuat WAW menjadi berbeda
+                     dengan wahana rekreasi serupa dilain tempat. </p>
+                  <a class="read_more" href="Javascript:void(0)"> Read More</a>
+               </div>
+            </div>
+            <div class="col-md-7">
+               <div class="about_img">
+                  <figure><img src="images/about.png" alt="#" /></figure>
+               </div>
+            </div>
+         </div>
+      </div>
+   </div>
+   <!-- end about -->
+   <!-- our_room -->
+   <div class="our_room" id="schedule">
+      <div class="titlepage">
+         <h2>Schedule On Week</h2>
+      </div>
+      <table class="table table-hover">
+         <thead>
+            <tr>
+               <th scope="col"></th>
+               <th scope="col">Day</th>
+               <th scope="col">Status</th>
+               <th scope="col">Cost</th>
+            </tr>
+         </thead>
+         <tbody>
+            <tr>
+               <th scope="row"></th>
+               <td>Senin</td>
+               <td>Open</td>
+               <td>Rp 20.000</td>
+            </tr>
+            <tr>
+               <th scope="row"></th>
+               <td>Rabu</td>
+               <td>Open</td>
+               <td>Rp 20.000</td>
+            </tr>
+            <tr>
+               <th scope="row"></th>
+               <td>Kamis</td>
+               <td>Open</td>
+               <td>Rp 20.000</td>
+            </tr>
+            <tr>
+               <th scope="row"></th>
+               <td>Jumat</td>
+               <td>Close</td>
+               <td><b>-</b></td>
+            </tr>
+            <tr>
+               <th scope="row"></th>
+               <td>Sabtu</td>
+               <td>Open</td>
+               <td>Rp 25.000</td>
+            </tr>
+            <tr>
+               <th scope="row"></th>
+               <td>Minggu</td>
+               <td>Open</td>
+               <td>Rp 30.000</td>
+            </tr>
+         </tbody>
+      </table>
+   </div>
+   <!-- end our_room -->
+
+   <!-- blog -->
+   <div class="blog" id="facility">
+      <div class="container">
+         <div class="row">
+            <div class="col-md-12">
+               <div class="titlepage">
+                  <h2>Facility</h2>
+                  <p>Fasilitas Mewah Harga Murah</p>
+               </div>
+            </div>
+         </div>
+         <div class="row">
+            <div class="col-md-4">
+               <div class="blog_box">
+                  <div class="blog_img">
+                     <figure><img src="images/blog1.jpg" alt="#" /></figure>
+                  </div>
+                  <div class="blog_room">
+                     <h3>Kolam Air Panas</h3>
+                     <span>Hot Springs</span>
+                     <p align="justify">Air panas Hapanasan ini juga bisa menjadi terapi kesehatan kulit dan tubuh
+                        dengan suhu air yang
+                        bervariasi dan sesuai dengan kebutuhan.</p>
+                  </div>
+               </div>
+            </div>
+            <div class="col-md-4">
+               <div class="blog_box">
+                  <div class="blog_img">
+                     <figure><img src="images/blog1.jpg" alt="#" /></figure>
+                  </div>
+                  <div class="blog_room">
+                     <h3>Kolam Mini</h3>
+                     <span>Mini Pool</span>
+                     <p align="justify">Suara gemericik air dapat membuat suasana hati yang tadinya penat menjadi sejuk
+                        dan nyaman. Kolam mini ini juga didesain untuk anak-anak di bawah umur </p>
+                  </div>
+               </div>
+            </div>
+            <div class="col-md-4">
+               <div class="blog_box">
+                  <div class="blog_img">
+                     <figure><img src="images/blog1.jpg" alt="#" /></figure>
+                  </div>
+                  <div class="blog_room">
+                     <h3>water Park</h3>
+                     <span>Wahana Air</span>
+                     <p align="justify">sebagai tempat hiburan air,dimana para pengunjung akan merasakan beberapa
+                        wahana air,
+                        seperti seluncuran, ember tumpah, kolam ombak dan lainnya.</p>
+                  </div>
+               </div>
+            </div>
+         </div>
+      </div>
+   </div>
+   <!-- end blog -->
+   <!--  contact -->
+   <div class="contact">
+      <div class="container">
+         <div class="row">
+            <div class="col-md-12">
+               <div class="titlepage">
+                  <h2>Contact Us</h2>
+               </div>
+            </div>
+         </div>
+         <div class="row">
+            <div class="col-md-6">
+               <form id="request" class="main_form">
+                  <div class="row">
+                     <div class="col-md-12 ">
+                        <input class="contactus" placeholder="Name" type="type" name="Name">
+                     </div>
+                     <div class="col-md-12">
+                        <input class="contactus" placeholder="Email" type="type" name="Email">
+                     </div>
+                     <div class="col-md-12">
+                        <input class="contactus" placeholder="Phone Number" type="type" name="Phone Number">
+                     </div>
+                     <div class="col-md-12">
+                        <textarea class="textarea" placeholder="Message" type="type" Message="Name">Message</textarea>
+                     </div>
+                     <div class="col-md-12">
+                        <button class="send_btn">Send</button>
+                     </div>
+                  </div>
+               </form>
+            </div>
+            <div class="col-md-6">
+               <div class="map_main">
+                  <div class="map-responsive">
+                     <iframe width="600" height="400" style="border:0; width: 100%;"
+                        src="https://www.youtube.com/embed/lBSUoSLVySk?controls=0" title="YouTube video player"
+                        frameborder="0" allow="" allowfullscreen></iframe>
+                     <!-- <iframe src="https://www.google.com/maps/embed/v1/place?key=AIzaSyA0s1a7phLN0iaD6-UE7m4qP-z21pH0eSc&amp;q=Eiffel+Tower+Paris+France" width="600" height="400" frameborder="0" style="border:0; width: 100%;" allowfullscreen=""></iframe> -->
+                  </div>
+               </div>
+            </div>
+         </div>
+      </div>
+   </div>
+   <!-- end contact -->
+   <!--  footer -->
+   <footer>
+      <div class="footer" id="contact">
+         <div class="container">
+            <div class="row">
+               <div class=" col-md-4">
+                  <h3>Contact US</h3>
+                  <ul class="conta">
+                     <li><i class="fa fa-map-marker" aria-hidden="true"></i> Address</li>
+                     <li><i class="fa fa-mobile" aria-hidden="true"></i> +6281211806001</li>
+                     <li> <i class="fa fa-envelope" aria-hidden="true"></i><a href="#"> alensswimming@gmail.com</a></li>
+                  </ul>
+               </div>
+               <div class="col-md-4">
+                  <h3>Menu Link</h3>
+                  <ul class="link_menu">
+                     <li class="active"><a href="#">Home</a></li>
+                     <li><a href="#"> about</a></li>
+                     <li><a href="#">Our Room</a></li>
+                     <li><a href="#">Gallery</a></li>
+                     <li><a href="#">Blog</a></li>
+                     <li><a href="#">Contact Us</a></li>
+                  </ul>
+               </div>
+               <div class="col-md-4">
+                  <h3>News letter</h3>
+                  <form class="bottom_form">
+                     <input class="enter" placeholder="Enter your email" type="text" name="Enter your email">
+                     <button class="sub_btn">subscribe</button>
+                  </form>
+                  <ul class="social_icon">
+                     <li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
+                     <li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+                     <li><a href="#"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
+                     <li><a href="#"><i class="fa fa-youtube-play" aria-hidden="true"></i></a></li>
+                  </ul>
+               </div>
+            </div>
+         </div>
+         <div class="copyright">
+            <div class="container">
+               <div class="row">
+                  <div class="col-md-10 offset-md-1">
+
+                     <p>
+                        © 2022 All Rights Reserved. Design by <a href="https://wa.me/+6281211806001">Alens Swimming</a>
+                     </p>
+
+                  </div>
+               </div>
+            </div>
+         </div>
+      </div>
+   </footer>
+   <!-- end footer -->
+   <!-- Javascript files-->
+   <script src="js/jquery.min.js"></script>
+   <script src="js/bootstrap.bundle.min.js"></script>
+   <script src="js/jquery-3.0.0.min.js"></script>
+   <!-- sidebar -->
+   <script src="js/jquery.mCustomScrollbar.concat.min.js"></script>
+   <script src="js/custom.js"></script>
+</body>
+
+</html>
